# backend/internal/gen/admin/views/view.go
@@ -48,6 +48,8 @@ type SsmAdminChallengeView struct {
 
 // ChallengeServiceView is a type that runs validations on a projected type.
 type ChallengeServiceView struct {
+	UserDisplay *string
+	Hyperlink   *bool
 }
 
 // AdminChallengeFilesView is a type that runs validations on a projected type.
@@ -155,6 +157,13 @@ func ValidateSsmAdminChallengeView(result *SsmAdminChallengeView) (err error) {
 	if result.ID != nil {
 		err = goa.MergeErrors(err, goa.ValidateFormat("result.id", *result.ID, goa.FormatUUID))
 	}
+	for _, e := range result.Services {
+		if e != nil {
+			if err2 := ValidateChallengeServiceView(e); err2 != nil {
+				err = goa.MergeErrors(err, err2)
+			}
+		}
+	}
 	for _, e := range result.Files {
 		if e != nil {
 			if err2 := ValidateAdminChallengeFilesView(e); err2 != nil {
@@ -178,7 +187,12 @@ func ValidateSsmAdminChallengeView(result *SsmAdminChallengeView) (err error) {
 // ValidateChallengeServiceView runs the validations defined on
 // ChallengeServiceView.
 func ValidateChallengeServiceView(result *ChallengeServiceView) (err error) {
-
+	if result.UserDisplay == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("user_display", "result"))
+	}
+	if result.Hyperlink == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("hyperlink", "result"))
+	}
 	return
 }
 
