# backend/internal/gen/http/challenge/server/encode_decode.go
@@ -315,7 +315,10 @@ func marshalChallengeviewsChallengeServiceViewToChallengeServiceResponse(v *chal
 	if v == nil {
 		return nil
 	}
-	res := &ChallengeServiceResponse{}
+	res := &ChallengeServiceResponse{
+		UserDisplay: *v.UserDisplay,
+		Hyperlink:   *v.Hyperlink,
+	}
 
 	return res
 }
